--- a/index.html
+++ b/index.html
@@ -229,6 +229,70 @@
         </div>
     </section>
     <!-- ==================================== Bank Secure Section End =================================== -->
+    <!-- ==================================== Flexible-work Section Start =================================== -->
+    <section id="flexible-section">
+        <!-- 1st Part Start -->
+        <div class="container">
+            <div class="row">
+                <div class="col_1_of_2 left">
+                    <div class="item">
+                        <div class="item-title">
+                            <h2>Flexible work, at your fingertips</h2>
+                        </div>
+                        <div class="item-details">
+                            <p>Find local jobs that fit your skills and schedule. With Herotasker, you have the freedom and support to be your own boss.</p>
+                        </div>
+                        <button class="btn">Earn money as a Tasker</button>
+                    </div>
+                </div>
+                <div class="col_1_of_2 right">
+                    <div class="image">
+                        <img src="resources/assets/flexiable-work.png" alt="">
+                        <div class="payment-info">
+                            <div class="title">
+                                <h5>Payment received</h5>
+                            </div>
+                            <div class="row">
+                                <div class="col">
+                                    <div class="item">
+                                        <h6 class="deliery-status">Food Delivery</h6>
+                                        <p class="time-status">2h ago</p>
+                                    </div>
+                                </div>
+                                <div class="col">
+                                    <div class="item">
+                                        <p class="pay-amount">$179</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- 1st Part End -->
+        <!-- 2nd Part Start -->
+        <div class="container boost">
+            <div class="item-title">
+                <h2>Boost your income by signing up with us! <br> Become a tasker</h2>
+            </div>
+            <div class="row">
+                <div class="col_1_of_2 linfo">
+                    <h3>Post your first task in seconds</h3>
+                    <p>Get your to-do list finished and save time.</p>
+                    <ul>
+                        <li>Describe what you need done  </li>
+                        <li>Set your budget</li>
+                        <li>Receive quotes and pick the best tasker</li>
+                    </ul>
+                </div>
+                <div class="col_1_of_2"></div>
+            </div>
+        </div>
+        <!-- 2nd Part Start -->
+    </section>
+    <!-- ==================================== Flexible-work Section End =================================== -->
+
     </main>
     <!-- ==================================== Footer Start =================================== -->
     <footer id="footer">
