--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
         <!-- 2nd Part Start -->
     </section>
     <!-- ==================================== Flexible-work Section End =================================== -->
-    <!-- ==================================== Flexible-work Section Start =================================== -->
+    <!-- ==================================== Article Section Start =================================== -->
     <section id="article-section">
         <div class="container">
             <div class="section-info">
@@ -363,7 +363,60 @@
             </div>
         </div>
     </section>
-    <!-- ==================================== Flexible-work Section End =================================== -->
+    <!-- ==================================== Article Section End =================================== -->
+    <!-- ==================================== Top Categories Section End =================================== -->
+    <section id="top-categories">
+        <div class="container">
+            <div class="grid">
+                <div class="item">
+                    <div class="section-logo">
+                        <img src="resources/assets/Top Categories icon 1.png" alt="categories-logo">
+                    </div>
+                    <div class="section-title">
+                        <h3>Top Categories</h3>
+                    </div>
+                    <div class="section-details">
+                        <p>See some of our top categories in your area</p>
+                    </div>
+                </div>
+                <div class="item-group">
+                    <div class="categories-list">
+                        <p>A-C</p>
+                        <p>D-F</p>
+                        <p>G-L</p>
+                        <p>M-S
+                        </p>
+                        <p>T-Z</p>
+                        <p>Cost Guides</p>
+                        <p>How to Guides</p>
+                    </div>
+                    <div class="categories-items">
+                        <p>Lorem ipsum dolor.</p>
+                        <p>Lorem ipsum dolor.</p>
+                        <p>Lorem ipsum dolor.</p>
+                        <p>Lorem ipsum dolor.</p>
+                        <p>Lorem ipsum dolor.</p>
+                        <p>Lorem ipsum dolor.</p>
+                        <p>Lorem ipsum dolor.</p>
+                        <p>Lorem ipsum dolor.</p>
+                        <p>Lorem ipsum dolor.</p>
+                        <p>Lorem ipsum dolor.</p>
+                        <p>Lorem ipsum dolor.</p>
+                        <p>Lorem ipsum dolor.</p>
+                        <p>Lorem ipsum dolor.</p>
+                        <p>Lorem ipsum dolor.</p>
+                        <p>Lorem ipsum dolor.</p>
+                        <p>Lorem ipsum dolor.</p>
+                        <p>Lorem ipsum dolor.</p>
+                        <p>Lorem ipsum dolor.</p>
+                        <p>Lorem ipsum dolor.</p>
+                        <p>Lorem ipsum dolor.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- ==================================== Top Categories Section End =================================== -->
 
     </main>
     <!-- ==================================== Footer Start =================================== -->
