new section added

--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
             </div>
             <div class="copyright-section">
                 <div class="copyright-info">
-                    <p>2023 c All right are reserved by <a href="www.proghive.com">progive.com</a></p>
+                    <p>2023 c All right are reserved by <a href="https://proghive.com">progive.com</a></p>
                 </div>
                 <div class="footer-social-icon">
                     <img class='app' src="resources/assets/google play and aple.png" alt="">
