--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <nav>
             <div class="container">
                 <div id="navbar">
-                    <div class="logo"><img src="resources/assets/logo.png" alt=""></div>
+                    <div class="logo"><a href="index.html"><img src="resources/assets/logo.png" alt="logo"></a></div>
                     <div class="humbarger">
                         <i class="fa-solid fa-bars" id="menu"></i>
                         <i class="fa-solid fa-xmark" id="close"></i>
@@ -33,11 +33,11 @@
                         <ul>
                             <li><a href="#" class="btn">Post a Task</a></li>
                             <li><a href="#" class="btn-2">Browse Tasks</a></li>
-                            <li><a href="#" class="nav-links">Categories</a></li>
+                            <li><a href="about.html" class="nav-links">Categories</a></li>
                             <li class="nav-links"><a href="#" class="nav-links">How it works</a></li>
                             <li><a href="#" class="signup-btn">Sign up</a></li>
                             <li><a href="#" class="log-btn">Login</a></li>
-                            <li><a href="#" class="navbtn">Become a Tasker</a></li>
+                            <li><a href="become-a-tasker.html" class="navbtn">Become a Tasker</a></li>
                         </ul>
                     </div>
                 </div>
